# xad-r

./: .Rbuildignore  .gitignore  .gitmodules  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md
.github/workflows/: R-CMD-check.yml
R/: RcppExports.R  adj_1st.R  fwd_1st.R  math.R  utils.R  xad-package.R  xadr-package.R
cmake/: FindR.cmake  xad-rConfig.cmake.in
docs/: analysis_xad.md  analysis_xad.py  analysis_xtensor.md  roadmap_xad-r.md
include/xad-r/: rutils.hpp  xad-r.hpp  xad_r_config.hpp
inst/examples/: adj_1st.R  fwd_1st.R  swap_pricer.R
inst/include/XAD/: Instantiations.hpp  Literals.hpp
src/: CMakeLists.txt  Makevars  Makevars.win  RcppExports.cpp  init.cpp  rcpp_module.cpp  xad_bindings.cpp  xad_tape.cpp
src/include/XAD/: Config.hpp  GenerateMode.hpp  Version.hpp
tests/: CMakeLists.txt  test_main.cpp  testthat.R
tests/testthat/: test-adj_1st.R  test-basic.R  test-fwd_1st.R  test-math.R  test-samples.R
tools/: sync-xad-headers.sh
