##############################################################################
#
#  Top-level CMakeLists.txt for xad-r
#
#  Provides a CMake-based build for the xad-r R package bindings,
#  complementing the standard R package build (via Makevars).
#
##############################################################################

cmake_minimum_required(VERSION 3.18)

project(xad-r
    VERSION 0.1.0
    DESCRIPTION "R bindings for the XAD automatic differentiation library"
    LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# ============================================================
# Options
# ============================================================
option(XADR_BUILD_TESTS "Build the C++ test harness" OFF)
option(XADR_INSTALL     "Install xad-r headers"      ON)

# ============================================================
# Dependencies
# ============================================================

# 1. XAD (git submodule at src/xad)
set(XAD_SUBMODULE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src/xad")
if(NOT EXISTS "${XAD_SUBMODULE_DIR}/CMakeLists.txt")
    message(FATAL_ERROR
        "XAD submodule not found at ${XAD_SUBMODULE_DIR}. "
        "Run: git submodule update --init --recursive")
endif()

# Tell XAD not to build tests/samples by default
set(XAD_BUILD_TESTS   OFF CACHE BOOL "" FORCE)
set(XAD_BUILD_SAMPLES OFF CACHE BOOL "" FORCE)
add_subdirectory("${XAD_SUBMODULE_DIR}" xad)

# 2. Find R installation (used for header/library paths)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
find_package(R REQUIRED)

# 3. Find Rcpp headers
find_package(Rcpp QUIET)
if(NOT Rcpp_FOUND)
    # Fallback: ask R for Rcpp path
    execute_process(
        COMMAND ${R_EXECUTABLE} -e "cat(system.file('include', package='Rcpp'))"
        OUTPUT_VARIABLE RCPP_INCLUDE_DIR
        OUTPUT_STRIP_TRAILING_WHITESPACE)
    if(NOT RCPP_INCLUDE_DIR)
        message(FATAL_ERROR "Rcpp package not found. Install it with: install.packages('Rcpp')")
    endif()
endif()

# ============================================================
# Generated headers (pre-generated for non-CMake builds;
# CMake build regenerates them properly)
# ============================================================
configure_file(
    "${XAD_SUBMODULE_DIR}/src/XAD/Config.hpp.in"
    "${CMAKE_CURRENT_BINARY_DIR}/include/XAD/Config.hpp"
    @ONLY)
configure_file(
    "${XAD_SUBMODULE_DIR}/src/XAD/Version.hpp.in"
    "${CMAKE_CURRENT_BINARY_DIR}/include/XAD/Version.hpp"
    @ONLY)
file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/include/XAD/GenerateMode.hpp"
    "// Generated by CMake - no additional tape modes\n")
file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/include/XAD/Instantiations.hpp"
    "// Generated by CMake - no additional tape instantiations\n")

# ============================================================
# xad-r shared library target
# ============================================================
add_library(xadr SHARED
    src/xad_bindings.cpp
    src/xad/src/Tape.cpp)

target_include_directories(xadr
    PRIVATE
        ${R_INCLUDE_DIR}
        ${RCPP_INCLUDE_DIR}
        "${XAD_SUBMODULE_DIR}/src"
        "${CMAKE_CURRENT_BINARY_DIR}/include"
        src/include)

target_link_libraries(xadr
    PRIVATE
        ${R_LIBRARY}
        XAD::xad)

target_compile_features(xadr PRIVATE cxx_std_17)

set_target_properties(xadr PROPERTIES
    PREFIX ""
    SUFFIX ".so")

# ============================================================
# Tests (optional C++ harness)
# ============================================================
if(XADR_BUILD_TESTS)
    enable_testing()
    add_subdirectory(tests/cpp)
endif()

# ============================================================
# Install
# ============================================================
if(XADR_INSTALL)
    install(TARGETS xadr DESTINATION lib)
    install(DIRECTORY src/include/
            DESTINATION include)
endif()
