cmake_minimum_required(VERSION 3.15)

# C++ tests using GoogleTest or basic test framework
# For now, just a placeholder structure

# Find RInside for C++ testing with R
# find_package(RInside)

# Test sources
set(TEST_SOURCES
  test_main.cpp
)

# Uncomment when ready to add C++ tests
# add_executable(xad_tests ${TEST_SOURCES})
# target_link_libraries(xad_tests ${R_LIBRARIES})
# add_test(NAME xad_cpp_tests COMMAND xad_tests)
